[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochvolmodels"
version = "1.1.8"
description = "Python implementation of pricing analytics and Monte Carlo simulations for stochastic volatility models including log-normal SV model, Heston"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
maintainers = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
    {name = "Parviz Rakhmonov", email = "ParvizRZ@gmail.com"},
]
keywords = [
    "stochastic volatility",
    "volatility modeling",
    "option pricing",
    "heston model",
    "log-normal stochastic volatility",
    "monte carlo simulation",
    "fourier transform",
    "quantitative finance",
    "derivatives pricing",
    "implied volatility",
    "volatility surface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
research = [
    "qis>=3.5.7",
]

visualization = [
    "plotly>=5.0.0",
]

numerical = [
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-regressions>=2.8.3",
    "ruff>=0.4",
]

all = [
    "stochvolmodels[research,visualization,numerical,jupyter]",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/StochVolModels"
Documentation = "https://github.com/ArturSepp/StochVolModels/blob/main/README.md"
Repository = "https://github.com/ArturSepp/StochVolModels.git"
Issues = "https://github.com/ArturSepp/StochVolModels/issues"

[tool.setuptools.packages.find]
include = ["stochvolmodels*"]
exclude = ["tests*", "docs*", "notebooks*", "resources*"]

[tool.setuptools.package-data]
stochvolmodels = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["stochvolmodels"]
omit = ["*/tests/*", "*/examples/*"]